	before calling `twittering-edit-close' when an edit buffer was
	modified.
	(twittering-update-status-from-pop-up-buffer): Mark an edit buffer
	as unmodified.

	* twittering-mode.el (twittering-edit-length-check): Calculate
	length of a tweet with a sign string.

	* twittering-mode.el (twittering-native-retweet): Truncate a tweet
	by width instead of length.
	(twittering-favorite): Likewise.

2010-02-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-goto-previous-status): simplified.

	* twittering-mode.el (twittering-goto-next-status): retrieve
	additional statuses if the function is called at the end of the
	buffer.

	* twittering-mode.el (twittering-render-timeline): use `insert'
	when inserting a status at the end of the buffer in order to keep
	the marker pointing the end of the buffer.

	* twittering-mode.el (twittering-render-timeline): move the
	position correctly even if the buffer is invisible.

2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-default-sentinel): Delete a
	call to `twittering-release-process' in the BODYFORM to avoid a
	double release.

2010-02-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-default-sentinel): call
	`twittering-release-process' even if some errors happen.
	(twittering-http-get-default-sentinel): remove invocation of
	`twittering-release-process'.

2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Call
	`twittering-release-process' when status code is not equal to
	"200", forgotten in the 2010-02-06 changing.

	* twittering-mode.el (twittering-status-to-status-datum): Change
	`regex-index' variable to local scope from global one.
	(twittering-status-to-status-datum): Rename `regex-index' to
	`regexp-index'.

	* twittering-mode.el (debug-print): Reduce redundant calls of
	`insert' because it can take multiple arguments.